<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_forum"
            android:icon="@drawable/ic_forum_icon"
            android:title="@string/forum" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat_icon"
            android:title="@string/chat" />

        <item
            android:id="@+id/nav_resources"
            android:icon="@drawable/ic_resources_icon"
            android:title="@string/resources" />

    </group>


    <item android:title="@string/user">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout_icon"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>


    <item android:title="@string/community">

        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_icon"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_icon"
                android:title="@string/rate" />
            </group>
        </menu>
    </item>

</menu>